Cambio de imagen de hero, agregando una sombra al titulo y texto, y cambio de color de fondo del btn, aumento de tamaño al texto

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -11,6 +11,11 @@ body {
   background-position: left;
 }
 
+.title,
+.text{
+  text-shadow: 3px 3px 5px #157347;
+}
+
 /* Mis trabajos */
 
 #Mis-trabajos .image-top {
